Fix #32405: snapping in UV editor does not work if snapping in 3D view is set to "snap to face" with "project individual ..." enabled.